# anki-connect-tts

./: .README.md.un~  .anki_utils.py.un~  .gitignore  .tts_utils.py.un~  Pipfile  README.md  README.md~  anki_utils.py  anki_utils.py~  main.py  prerun.py  pyproject.toml  requirements.txt  tts_utils.py  tts_utils.py~
